<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnsignin"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_139pxv"
        android:layout_marginEnd="@dimen/_26pxh"
        android:layout_marginStart="@dimen/_27pxh"
        android:layout_marginTop="@dimen/_48pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearSignIn"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignin"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_sign_in"
                    style="@style/txtInterbold30_1" tools:text="@string/lbl_sign_in"/>
                <FrameLayout android:gravity="start"
                    android:id="@+id/frameEmailorUsern"
                    android:layout_height="@dimen/_51pxv"
                    android:layout_marginTop="@dimen/_146pxv" android:layout_width="match_parent">
                    <ImageView android:id="@+id/imageVector"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_23pxh"
                        android:layout_marginBottom="@dimen/_13pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_9pxh"
                        android:layout_marginTop="@dimen/_13pxv"
                        android:layout_width="@dimen/_27pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector_gray_903"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector_gray_903"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnEmailOrUserNameOne"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_16pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_16pxv"
                        android:singleLine="true"
                        android:text="@string/msg_email_or_user_n"
                        android:textAllCaps="false"
                        style="@style/btnRoundedOutline" tools:text="@string/msg_email_or_user_n"/>
                </FrameLayout>
                <FrameLayout android:gravity="start"
                    android:id="@+id/framePassword"
                    android:layout_height="@dimen/_48pxv"
                    android:layout_marginTop="@dimen/_40pxv" android:layout_width="match_parent">
                    <LinearLayout android:id="@+id/linearRowvectorOne"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_12pxv"
                        android:layout_marginEnd="@dimen/_17pxh"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageVectorOne"
                            android:layout_height="@dimen/_24pxh"
                            android:layout_width="@dimen/_22pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_vector_gray_904"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_gray_904"/>
                        <ImageView android:id="@+id/imageVectorTwo"
                            android:layout_height="@dimen/_12pxh"
                            android:layout_marginBottom="@dimen/_7pxv"
                            android:layout_marginStart="@dimen/_239pxh"
                            android:layout_marginTop="@dimen/_5pxv"
                            android:layout_width="@dimen/_14pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_vector_gray_905"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_gray_905"/>
                    </LinearLayout>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnPassword"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_14pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_14pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_password"
                        android:textAllCaps="false"
                        style="@style/btnRoundedOutline_1" tools:text="@string/lbl_password"/>
                </FrameLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtForgetPassword"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_40pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/msg_forget_password"
                    style="@style/txtInterbold15_1" tools:text="@string/msg_forget_password"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSignInOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_158pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_sign_in"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_sign_in"/>
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearDonthaveaccou"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_39pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLanguage"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.72"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/msg_don_t_have_acco"
                        style="@style/txtInterregular15" tools:text="@string/msg_don_t_have_acco"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSignUp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.28"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_sign_up"
                        style="@style/txtInterbold15" tools:text="@string/lbl_sign_up"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
