<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnsignup"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_133pxv"
        android:layout_marginEnd="@dimen/_29pxh"
        android:layout_marginStart="@dimen/_29pxh"
        android:layout_marginTop="@dimen/_48pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle">
        <androidx.core.widget.NestedScrollView
            android:clipToPadding="false" android:fillViewport="true"
            android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearSignUp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignup"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_87pxh"
                    android:layout_marginStart="@dimen/_87pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_sign_up"
                    style="@style/txtInterbold30" tools:text="@string/lbl_sign_up"/>
                <FrameLayout android:gravity="start"
                    android:id="@+id/frameName"
                    android:layout_height="@dimen/_50pxv"
                    android:layout_marginTop="@dimen/_116pxv" android:layout_width="match_parent">
                    <ImageView android:id="@+id/imageVector"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_23pxh"
                        android:layout_marginBottom="@dimen/_13pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_9pxh"
                        android:layout_marginTop="@dimen/_13pxv"
                        android:layout_width="@dimen/_23pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtGroupOne"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_15pxv"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_15pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_full_name"
                        style="@style/txtRoundedOutline" tools:text="@string/lbl_full_name"/>
                </FrameLayout>
                <FrameLayout android:gravity="start"
                    android:id="@+id/frameEmail"
                    android:layout_height="@dimen/_50pxv"
                    android:layout_marginTop="@dimen/_40pxv" android:layout_width="match_parent">
                    <ImageView android:id="@+id/imageVectorOne"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginBottom="@dimen/_15pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="@dimen/_20pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector_black_902"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_902"/>
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtGroupFour"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_17pxv"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_13pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_email"
                        style="@style/txtRoundedOutline_1" tools:text="@string/lbl_email"/>
                </FrameLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:gravity="start"
                    android:id="@+id/recyclerSignUp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40pxv"
                    android:layout_width="match_parent"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    itemSpace="@{@dimen/_40pxh}" tools:itemCount="2" tools:listitem="@layout/row_sign_up"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSignUpOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_73pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_sign_up"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearAlreadyhavean"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_40pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtConfirmation"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.79"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/msg_already_have_an"
                        style="@style/txtInterregular15" tools:text="@string/msg_already_have_an"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSignin"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_5pxh"
                        android:layout_weight="0.21"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_sign_in"
                        style="@style/txtInterbold15" tools:text="@string/lbl_sign_in"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
